# TradingViewMCPServer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_IMPROVEMENTS_SUMMARY.md  FIXES_SUMMARY.md  GITHUB_REPO_INFO.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PINE_IMPLEMENTATION_SUMMARY.md  PINE_SCRIPT.md  PROJECT_NOTES.md  README.md  TESTING_NOTES.md  TRADINGVIEW_SETUP.md  USER_GUIDE.md  backtester.py  docker-compose.yml  forex_config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_mcp_server.py  strategy_manager.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
data/: __init__.py  downloader.py
docs/: ARCHITECTURE.md  GITHUB_REPO_INFO.md  PROJECT_SUMMARY.md  README.md
docs/guides/: MCP_SETUP_GUIDE.md  PINE_SCRIPT.md
docs/releases/: IMPROVEMENTS_v3.2.0.md  IMPROVEMENTS_v3.4.0.md  RELEASE_CHECKLIST.md  V3.1_IMPROVEMENTS.md  V6_VERIFIED_FEATURES.md
examples/: my_first_backtest.py  quickstart.py
examples/pine-scripts/: README.md
strategies/: __init__.py  base_strategy.py  bollinger_strategy.py  ma_crossover.py  macd_strategy.py  multi_indicator.py  rsi_strategy.py  template.py
tests/: __init__.py  conftest.py  test_cache.py  test_indicators.py  test_install.py  test_pine_script.py  test_system.py  test_timeframes.py  test_utils.py
tradingview_integration/: README.md  analyze_differences.py  compare_strategies.py  download_tradingview_data.py
tradingview_mcp/: __init__.py  config.py  server.py
tradingview_mcp/api/: __init__.py  alpha_vantage.py  cache.py
tradingview_mcp/indicators/: __init__.py  momentum.py  support_resistance.py  trend.py  volatility.py  volume.py
tradingview_mcp/pine_script/: __init__.py  autocomplete.py  documentation.py  errors.py  lexer.py  parser.py  sandbox.py  signatures.py  validator.py  versions.py
tradingview_mcp/utils/: __init__.py  asset_detector.py  formatters.py  validators.py
utils/: __init__.py  data_loader.py  performance.py  visualizer.py
