[project]
name = "tradingview-mcp"
version = "2.0.0"
description = "TradingView MCP server for Claude - Multi-asset trading assistant supporting Forex, Stocks, Crypto with 20+ technical indicators"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
tradingview-mcp = "tradingview_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tradingview_mcp = ["*.py"]

[tool.uv]
dev-dependencies = []
package = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
